--- a/index.html
+++ b/index.html
@@ -19,26 +19,28 @@
 
         <article>
             <h3>Subtítulo</h3>
-            <p></p>
-            <p></p>
-            <p></p>
-            <img src="" alt="">
-            <p></p>
+            <p>Flop over yowling nonstop the whole night eat the rubberband terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry or poop in litter box, scratch the walls i am the best. Chase mice chase after silly colored fish toys around the house, claw drapes. Fight an alligator and win meow to be let out love and coo around boyfriend who purrs and makes the perfect moonlight eyes so i can purr and swat the glittery gleaming yarn to him (the yarn is from a $125 sweater). Attack feet ccccccccccccaaaaaaaaaaaaaaatttttttttttttttttssssssssssssssss or meoooow and lick arm hair, mark territory, so attack the child. Destroy the blinds groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked but claw drapes meow to be let out for stare at ceiling light hiding behind the couch until lured out by a feathery toy. Peer out window, chatter at birds, lure them to mouth. </p>
+            <p>Flop over yowling nonstop the whole night eat the rubberband terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry or poop in litter box, scratch the walls i am the best. Chase mice chase after silly colored fish toys around the house, claw drapes. Fight an alligator and win meow to be let out love and coo around boyfriend who purrs and makes the perfect moonlight eyes so i can purr and swat the glittery gleaming yarn to him (the yarn is from a $125 sweater). Attack feet ccccccccccccaaaaaaaaaaaaaaatttttttttttttttttssssssssssssssss or meoooow and lick arm hair, mark territory, so attack the child. Destroy the blinds groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked but claw drapes meow to be let out for stare at ceiling light hiding behind the couch until lured out by a feathery toy. Peer out window, chatter at birds, lure them to mouth. 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veritatis id ratione laborum ex omnis iure assumenda beatae architecto, expedita itaque accusantium eius modi corporis minus nemo corrupti similique? Delectus.</p>
+            <p>Flop over yowling nonstop the whole night eat the rubberband terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry or poop in litter box, scratch the walls i am the best. Chase mice chase after silly colored fish toys around the house, claw drapes. Fight an alligator and win meow to be let out love and coo around boyfriend who purrs and makes the perfect moonlight eyes so i can purr and swat the glittery gleaming yarn to him (the yarn is from a $125 sweater). Attack feet ccccccccccccaaaaaaaaaaaaaaatttttttttttttttttssssssssssssssss or meoooow and lick arm hair, mark territory, so attack the child. Destroy the blinds groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked but claw drapes meow to be let out for stare at ceiling light hiding behind the couch until lured out by a feathery toy. Peer out window, chatter at birds, lure them to mouth. 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero esse doloremque fugiat, ut quas ullam voluptatum nihil quam unde illo pariatur nisi adipisci suscipit modi ducimus accusantium voluptate laudantium iusto.</p>
+            <img src="https://placekitten.com/g/200/300" alt="imagem gatinho">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vero sapiente ipsam maiores illum quas excepturi quae officiis natus voluptatum minus, eos quis aspernatur consectetur ipsum a iure repudiandae doloribus!</p>
 
             <ol>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="http://fb.com">Facebook</a></li>
+                <li><a href="http://mastertech.tech">MasterTech</a></li>
+                <li><a href="http://pudim.com.br">Pudim</a></li>
             </ol>
         </article>
     </section>
 
     <footer>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
+        <button>botao1</button>
+        <button>botao 2</button>
+        <button>botao 3</button>
+        <button>botao 4</button>
+        <button>botao 5</button>
     </footer>
 
 </body>
